--- a/src/pretix/control/templates/pretixcontrol/subevents/detail.html
+++ b/src/pretix/control/templates/pretixcontrol/subevents/detail.html
@@ -22,10 +22,10 @@
                     <legend>{% trans "General information" %}</legend>
                     {% bootstrap_field form.name layout="horizontal" %}
                     {% bootstrap_field form.active layout="horizontal" %}
-                    {% bootstrap_field form.date_from layout="horizontal" %}
-                    {% bootstrap_field form.date_to layout="horizontal" %}
+                    {% bootstrap_field form.date_from layout="horizontal" horizontal_field_class="col-md-9 splitdatetimerow" %}
+                    {% bootstrap_field form.date_to layout="horizontal" horizontal_field_class="col-md-9 splitdatetimerow" %}
                     {% bootstrap_field form.location layout="horizontal" %}
-                    {% bootstrap_field form.date_admission layout="horizontal" %}
+                    {% bootstrap_field form.date_admission layout="horizontal" horizontal_field_class="col-md-9 splitdatetimerow" %}
                     {% bootstrap_field form.frontpage_text layout="horizontal" %}
                     {% if meta_forms %}
                         <div class="form-group metadata-group">
@@ -49,8 +49,8 @@
                 </fieldset>
                 <fieldset>
                     <legend>{% trans "Timeline" %}</legend>
-                    {% bootstrap_field form.presale_start layout="horizontal" %}
-                    {% bootstrap_field form.presale_end layout="horizontal" %}
+                    {% bootstrap_field form.presale_start layout="horizontal" horizontal_field_class="col-md-9 splitdatetimerow" %}
+                    {% bootstrap_field form.presale_end layout="horizontal" horizontal_field_class="col-md-9 splitdatetimerow" %}
                 </fieldset>
                 <fieldset>
                     <legend>{% trans "Quotas" %}</legend>
