--- a/src/pretix/control/templates/pretixcontrol/vouchers/detail.html
+++ b/src/pretix/control/templates/pretixcontrol/vouchers/detail.html
@@ -26,7 +26,7 @@
                     <legend>{% trans "Voucher details" %}</legend>
                     {% bootstrap_field form.code layout="horizontal" %}
                     {% bootstrap_field form.max_usages layout="horizontal" %}
-                    {% bootstrap_field form.valid_until layout="horizontal" %}
+                    {% bootstrap_field form.valid_until layout="horizontal" horizontal_field_class="col-md-9 splitdatetimerow" %}
                     {% bootstrap_field form.block_quota layout="horizontal" %}
                     {% bootstrap_field form.allow_ignore_quota layout="horizontal" %}
                     <div class="form-group">
