--- a/src/pretix/control/templates/pretixcontrol/events/create_basics.html
+++ b/src/pretix/control/templates/pretixcontrol/events/create_basics.html
@@ -33,7 +33,7 @@
         {% bootstrap_field form.date_to layout="horizontal" horizontal_field_class="col-md-9 splitdatetimerow" %}
         {% bootstrap_field form.location layout="horizontal" %}
         {% bootstrap_field form.currency layout="horizontal" %}
-        {% bootstrap_field form.tax_rate layout="horizontal" %}
+        {% bootstrap_field form.tax_rate addon_after="%" layout="horizontal" %}
     </fieldset>
     <fieldset>
         <legend>{% trans "Display settings" %}</legend>
