--- a/src/pretix/control/templates/pretixcontrol/item/variations.html
+++ b/src/pretix/control/templates/pretixcontrol/item/variations.html
@@ -36,7 +36,7 @@
                         <div class="panel-body form-horizontal">
                             {% bootstrap_form_errors form %}
                             {% bootstrap_field form.active layout='horizontal' %}
-                            {% bootstrap_field form.default_price layout='horizontal' %}
+                            {% bootstrap_field form.default_price addon_after=request.event.currency layout='horizontal' %}
                             {% bootstrap_field form.description layout='horizontal' %}
                         </div>
                     </div>
@@ -69,7 +69,7 @@
                         </div>
                         <div class="panel-body form-horizontal">
                             {% bootstrap_field formset.empty_form.active layout='horizontal' %}
-                            {% bootstrap_field formset.empty_form.default_price layout='horizontal' %}
+                            {% bootstrap_field formset.empty_form.default_price addon_after=request.event.currency layout='horizontal' %}
                             {% bootstrap_field formset.empty_form.description layout='horizontal' %}
                         </div>
                     </div>
