--- a/src/pretix/control/templates/pretixcontrol/events/create_base.html
+++ b/src/pretix/control/templates/pretixcontrol/events/create_base.html
@@ -14,15 +14,15 @@
             {% block form %}
             {% endblock %}
             <div class="form-group submit-group">
+                <button type="submit" class="btn btn-primary btn-save pull-right">
+                    {% trans "Continue" %}
+                </button>
                 {% if wizard.steps.prev %}
                     <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}"
                             class="btn btn-default btn-lg pull-left">
                         {% trans "Back" %}
                     </button>
                 {% endif %}
-                <button type="submit" class="btn btn-primary btn-save">
-                    {% trans "Continue" %}
-                </button>
             </div>
         </form>
     {% else %}
