--- a/src/pretix/control/templates/pretixcontrol/event/display.html
+++ b/src/pretix/control/templates/pretixcontrol/event/display.html
@@ -1,17 +1,24 @@
 {% extends "pretixcontrol/event/settings_base.html" %}
 {% load i18n %}
 {% load bootstrap3 %}
+{% load hierarkey_form %}
 {% block inside %}
     <form action="" method="post" class="form-horizontal" enctype="multipart/form-data">
         {% csrf_token %}
         {% bootstrap_form_errors form %}
         <fieldset>
-            <legend>{% trans "Display settings" %}</legend>
-            {% bootstrap_field form.primary_color layout="horizontal" %}
-            {% bootstrap_field form.primary_font layout="horizontal" %}
+            <legend>{% trans "Event page" %}</legend>
             {% bootstrap_field form.logo_image layout="horizontal" %}
             {% bootstrap_field form.frontpage_text layout="horizontal" %}
             {% bootstrap_field form.show_variations_expanded layout="horizontal" %}
+        </fieldset>
+        <fieldset>
+            <legend>{% trans "Shop design" %}</legend>
+            {% url "control:organizer.display" organizer=request.organizer.slug as org_url %}
+            {% propagated request.event org_url "primary_color" "primary_font" %}
+                {% bootstrap_field form.primary_color layout="horizontal" %}
+                {% bootstrap_field form.primary_font layout="horizontal" %}
+            {% endpropagated %}
         </fieldset>
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
