Fix display of wrong email address in order confirmation

--- a/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
@@ -111,7 +111,7 @@
                     <div class="panel-body">
                         <dl class="dl-horizontal">
                             <dt>{% trans "E-mail address" %}</dt>
-                            <dd>{{ request.session.email }}</dd>
+                            <dd>{{ cart_session.email }}</dd>
                         </dl>
                         {% for l, v in contact_info %}
                             <dl class="dl-horizontal">
